Add WPS based layers

--- a/src/index-dev.html
+++ b/src/index-dev.html
@@ -29,6 +29,8 @@
     <script src="resources/lib/PapaParse/4.5.0/papaparse.min.js"></script>
     <script src="resources/lib/momentjs/moment-with-locales.js"></script>
     <script src="resources/lib/turfjs-5.1.6/turf.min.js"></script>
+    <script src="resources/lib/jquery-3.6.0.min.js"></script>
+    <script src="resources/lib/wps-js-all.min.js"></script>
     <script src="resources/lib/geostyler-libs/react/umd/react.development.js"></script>
     <script src="resources/lib/geostyler-libs/react-dom/umd/react-dom.development.js"></script>
     <script src="resources/lib/geostyler-libs/geostyler/browser/geostyler.js"></script>
