--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,8 @@
     <script src="resources/lib/PapaParse/4.5.0/papaparse.min.js"></script>
     <script src="resources/lib/momentjs/moment-with-locales.js"></script>
     <script src="resources/lib/turfjs-5.1.6/turf.min.js"></script>
+    <script src="resources/lib/jquery-3.6.0.min.js"></script>
+    <script src="resources/lib/wps-js-all.min.js"></script>
     <script src="resources/lib/geostyler-libs/react/umd/react.production.min.js"></script>
     <script src="resources/lib/geostyler-libs/react-dom/umd/react-dom.production.min.js"></script>
     <script src="resources/lib/geostyler-libs/geostyler/browser/geostyler.js"></script>
@@ -116,9 +118,9 @@
             position: fixed;
             top: 50%;
             left: 50%;
-            transform: translate(-120px, 0px);*/
+            transform: translate(-120px, 0px);
             width: 140px;
-            height: 20px; */
+            height: 20px;
             margin: 5px;
             display: inline-block;
         }
