--- a/src/index-dev.html
+++ b/src/index-dev.html
@@ -50,6 +50,7 @@
     <script src="resources/lib/d3-util/browser/main.js"></script>
     <script src="resources/lib/openrouteservice-js/ors-js-client.js"></script>
     <script src="https://unpkg.com/codepage@1.15.0/dist/cpexcel.full.js"></script>
+    <script src="https://unpkg.com/shpjs@latest/dist/shp.js"></script>
 
     <script type="text/javascript">
         // configure the appContext URL to be used to get the application context
