--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
     <title>IMIS3[GIS] - BfS - Bundesamt f&uuml;r Strahlenschutz</title>
 
     <link rel="stylesheet" type="text/css" href="resources/lib/openlayers-v6.5.2-dist/ol.css" />
-    <link rel="stylesheet" type="text/css" href="resources/lib/geostyler-libs/antd/dist/antd.min.css" />
-    <link rel="stylesheet" type="text/css" href="resources/lib/geostyler-libs/geostyler/browser/geostyler.css" />
+    <link rel="stylesheet" type="text/css" href="resources/lib/npm-libs/antd/dist/antd.min.css" />
+    <link rel="stylesheet" type="text/css" href="resources/lib/npm-libs/geostyler/browser/geostyler.css" />
     <!-- Required for non-UTF encodings -->
     <script src="resources/lib/encoding-polyfill/encoding-indexes.js"></script>
     <script src="resources/lib/encoding-polyfill/encoding.js"></script>
@@ -34,14 +34,15 @@
     <script src="resources/lib/turfjs-5.1.6/turf.min.js"></script>
     <script src="resources/lib/jquery-3.6.0.min.js"></script>
     <script src="resources/lib/wps-js-all.min.js"></script>
-    <script src="resources/lib/geostyler-libs/react/umd/react.production.min.js"></script>
-    <script src="resources/lib/geostyler-libs/react-dom/umd/react-dom.production.min.js"></script>
-    <script src="resources/lib/geostyler-libs/geostyler/browser/geostyler.js"></script>
-    <script src="resources/lib/geostyler-libs/geostyler-geojson-parser/browser/geoJsonDataParser.js"></script>
-    <script src="resources/lib/geostyler-libs/geostyler-openlayers-parser/browser/olStyleParser.js"></script>
-    <script src="resources/lib/geostyler-libs/geostyler-sld-parser/browser/sldStyleParser.js"></script>
-    <script src="resources/lib/geostyler-libs/geostyler-qgis-parser/browser/qgisStyleParser.js"></script>
-    <script src="resources/lib/geostyler-libs/geostyler-mapbox-parser/browser/mapboxStyleParser.js"></script>
+    <script src="resources/lib/npm-libs/react/umd/react.production.min.js"></script>
+    <script src="resources/lib/npm-libs/react-dom/umd/react-dom.production.min.js"></script>
+    <script src="resources/lib/npm-libs/geostyler/browser/geostyler.js"></script>
+    <script src="resources/lib/npm-libs/geostyler-geojson-parser/browser/geoJsonDataParser.js"></script>
+    <script src="resources/lib/npm-libs/geostyler-openlayers-parser/browser/olStyleParser.js"></script>
+    <script src="resources/lib/npm-libs/geostyler-sld-parser/browser/sldStyleParser.js"></script>
+    <script src="resources/lib/npm-libs/geostyler-qgis-parser/browser/qgisStyleParser.js"></script>
+    <script src="resources/lib/npm-libs/geostyler-mapbox-parser/browser/mapboxStyleParser.js"></script>
+    <script src="resources/lib/npm-libs/echarts/dist/echarts.min.js"></script>
     <!-- JSONIX -->
     <script src="resources/lib/jsonix/Jsonix-min.js"></script>
     <script src="resources/lib/jsonix/SLD_1_0_0_GeoServer.js"></script>
