--- a/src/index.html
+++ b/src/index.html
@@ -62,13 +62,13 @@
         // configure the appContext URL to be used to get the application context
         var Koala = Koala || {};
         // must be queryable from XHR (CORS…)
-        //Koala.appContextUrl = "resources/appContext.json";
+        Koala.appContextUrl = "resources/configs/appContext.json";
         // var port = "";
         // if (window.location.port){
         //     port = ":" + window.location.port;
         // }
         // Koala.appContextUrl = window.location.protocol + "//" + window.location.hostname + port + "/gis_client_configs/appContext.json";
-        Koala.appContextUrl = window.location.origin + "/gis_client_configs/appContext.json";
+        //Koala.appContextUrl = window.location.origin + "/gis_client_configs/appContext.json";
     </script>
     <script type="text/javascript">
         var Ext = Ext || {}; // Ext namespace won't be defined yet...
