--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
         // configure the appContext URL to be used to get the application context
         var Koala = Koala || {};
         // must be queryable from XHR (CORS…)
-        //Koala.appContextUrl = "resources/appContext.json";
+        //Koala.appContextUrl = "resources/configs/appContext.json";
         // var port = "";
         // if (window.location.port){
         //     port = ":" + window.location.port;
