--- a/src/index-dev.html
+++ b/src/index-dev.html
@@ -51,9 +51,9 @@
     <script src="resources/lib/d3-util/browser/main.js"></script>
     <script src="resources/lib/openrouteservice-js/ors-js-client.js"></script>
     <script src="resources/lib/geopackage/geopackage.min.js"></script>
-    <script src="https://unpkg.com/codepage@1.15.0/dist/cpexcel.full.js"></script>
-    <script src="https://unpkg.com/shpjs@latest/dist/shp.js"></script>
-    <script src="https://unpkg.com/jszip@3.10.1/dist/jszip.min.js"></script>
+    <script src="resources/lib/cpexcel.full.js"></script>
+    <script src="resources/lib/shp.js"></script>
+    <script src="resources/lib/jszip.min.js"></script>
 
     <script type="text/javascript">
         // configure the appContext URL to be used to get the application context
