Add vector tile layers

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="resources/lib/openlayers-v6.15.1-dist/ol.css" />
     <link rel="stylesheet" type="text/css" href="resources/lib/npm-libs/antd/dist/antd.min.css" />
     <link rel="stylesheet" type="text/css" href="resources/lib/npm-libs/geostyler/browser/geostyler.css" />
+    <link rel="stylesheet" type="text/css" href="resources/lib/maplibre-gl.css" />
     <!-- Required for non-UTF encodings -->
     <script src="resources/lib/encoding-polyfill/encoding-indexes.js"></script>
     <script src="resources/lib/encoding-polyfill/encoding.js"></script>
@@ -57,6 +58,7 @@
     <script src="resources/lib/cpexcel.full.js"></script>
     <script src="resources/lib/shp.js"></script>
     <script src="resources/lib/jszip.min.js"></script>
+    <script src="resources/lib/maplibre-gl.js"></script>
 
     <script type="text/javascript">
         // configure the appContext URL to be used to get the application context
