Update GeoStyler to v18

--- a/src/index-dev.html
+++ b/src/index-dev.html
@@ -14,7 +14,6 @@
     <title>IMIS3[GIS] - BfS - Bundesamt f&uuml;r Strahlenschutz</title>
 
     <link rel="stylesheet" type="text/css" href="resources/lib/openlayers-v6.15.1-dist/ol.css" />
-    <link rel="stylesheet" type="text/css" href="resources/lib/npm-libs/antd/dist/antd.min.css" />
     <link rel="stylesheet" type="text/css" href="resources/lib/npm-libs/geostyler/browser/geostyler.css" />
     <link rel="stylesheet" type="text/css" href="resources/lib/maplibre-gl.css" />
     <!-- Required for non-UTF encodings -->
@@ -32,14 +31,14 @@
     <script src="resources/lib/turfjs-5.1.6/turf.min.js"></script>
     <script src="resources/lib/jquery-3.6.0.min.js"></script>
     <script src="resources/lib/wps-js-all.min.js"></script>
-    <script src="resources/lib/npm-libs/react/umd/react.development.js"></script>
-    <script src="resources/lib/npm-libs/react-dom/umd/react-dom.development.js"></script>
-    <script src="resources/lib/npm-libs/geostyler/browser/geostyler.js"></script>
-    <script src="resources/lib/npm-libs/geostyler-geojson-parser/browser/geoJsonDataParser.js"></script>
-    <script src="resources/lib/npm-libs/geostyler-openlayers-parser/browser/olStyleParser.js"></script>
-    <script src="resources/lib/npm-libs/geostyler-sld-parser/browser/sldStyleParser.js"></script>
-    <script src="resources/lib/npm-libs/geostyler-qgis-parser/browser/qgisStyleParser.js"></script>
-    <script src="resources/lib/npm-libs/geostyler-mapbox-parser/browser/mapboxStyleParser.js"></script>
+    <script src="resources/lib/npm-libs/umd-react/dist/react.development.js"></script>
+    <script src="resources/lib/npm-libs/umd-react/dist/react-dom.development.js"></script>
+    <script src="resources/lib/npm-libs/geostyler/browser/geostyler.iife.js"></script>
+    <script src="resources/lib/npm-libs/geostyler-geojson-parser/dist/geoJsonDataParser.iife.js"></script>
+    <script src="resources/lib/npm-libs/geostyler-openlayers-parser/dist/olStyleParser.iife.js"></script>
+    <script src="resources/lib/npm-libs/geostyler-sld-parser/dist/sldStyleParser.iife.js"></script>
+    <script src="resources/lib/npm-libs/geostyler-qgis-parser/dist/qgisStyleParser.iife.js"></script>
+    <script src="resources/lib/npm-libs/geostyler-mapbox-parser/dist/mapboxStyleParser.iife.js"></script>
     <script src="resources/lib/npm-libs/echarts/dist/echarts.min.js"></script>
     <!-- JSONIX -->
     <script src="resources/lib/jsonix/Jsonix-min.js"></script>
