Update geostyler, fix antd setup

--- a/src/index-dev.html
+++ b/src/index-dev.html
@@ -33,6 +33,9 @@
     <script src="resources/lib/wps-js-all.min.js"></script>
     <script src="resources/lib/npm-libs/umd-react/dist/react.development.js"></script>
     <script src="resources/lib/npm-libs/umd-react/dist/react-dom.development.js"></script>
+    <script src="resources/lib/dayjs.min.js"></script>
+    <script src="resources/lib/antd.min.js"></script>
+    <script src="resources/lib/index.umd.min.js"></script>
     <script src="resources/lib/npm-libs/geostyler/browser/geostyler.iife.js"></script>
     <script src="resources/lib/npm-libs/geostyler-geojson-parser/dist/geoJsonDataParser.iife.js"></script>
     <script src="resources/lib/npm-libs/geostyler-openlayers-parser/dist/olStyleParser.iife.js"></script>
