--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
     <script src="resources/lib/wps-js-all.min.js"></script>
     <script src="resources/lib/npm-libs/umd-react/dist/react.production.min.js"></script>
     <script src="resources/lib/npm-libs/umd-react/dist/react-dom.production.min.js"></script>
+    <script src="resources/lib/dayjs.min.js"></script>
+    <script src="resources/lib/antd.min.js"></script>
+    <script src="resources/lib/index.umd.min.js"></script>
     <script src="resources/lib/npm-libs/geostyler/browser/geostyler.iife.js"></script>
     <script src="resources/lib/npm-libs/geostyler-geojson-parser/dist/geoJsonDataParser.iife.js"></script>
     <script src="resources/lib/npm-libs/geostyler-openlayers-parser/dist/olStyleParser.iife.js"></script>
