--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
     <script src="resources/lib/npm-libs/umd-react/dist/react-dom.production.min.js"></script>
     <script src="resources/lib/dayjs.min.js"></script>
     <script src="resources/lib/antd.min.js"></script>
-    <script src="resources/lib/index.umd.min.js"></script>
+    <script src="resources/lib/antd-icons.umd.min.js"></script>
     <script src="resources/lib/npm-libs/geostyler/browser/geostyler.iife.js"></script>
     <script src="resources/lib/npm-libs/geostyler-geojson-parser/dist/geoJsonDataParser.iife.js"></script>
     <script src="resources/lib/npm-libs/geostyler-openlayers-parser/dist/olStyleParser.iife.js"></script>
